--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "solidity-lang",
     "displayName": "solidity-syntax",
     "description": "solidity syntax highlighting, thats it",
+    "publisher": "ContractShark",
     "license": "MIT",
+   "repository": "git@github.com:contractshark/vscode-extenstion.git",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.55.0"
