--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
     "engines": {
         "vscode": "^1.55.0"
     },
+  "activationEvents": [
+    "onLanguage:solidity"
+  ],
+"main": "./out/src/extension",
+"dependencies": {
+    "ajv": "^6.10.2",
+    "ajv-keywords": "^3.4.1",
+    "find-cache-dir": "^2.1.0",
+    "fs-extra": "^4.0.3",
+    "vscode-languageclient": "^6.1.3",
+    "vscode-languageserver": "^6.1.1",
+    "vscode-languageserver-textdocument": "^1.0.1",
+    "vscode-uri": "2.1.2",
+    "yaml-js": "0.2.3"
+  },
     "scripts": {
         "ci": "npm i -g vsce && npm run build",
         "build": "vsce package",
+        "prepare": "node ./node_modules/vscode/bin/install"
         "test": " ./node_modules/.bin/ajv -s tests/tmLanguage.schema.json -d syntaxes/solidity.tmLanguage.json"
     },
     "categories": [
