--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "publisher": "ContractShark",
     "icon": "assets/icon.png",
     "license": "MIT",
-    "repository": "https://github.com/contractshark/vscode-extenstion.git",
+    "repository": "https://github.com/contractshark/vscode-solidity-extenstion.git",
     "version": "1.1.0",
     "engines": {
         "vscode": "^1.55.0"
@@ -46,9 +46,9 @@
         ]
     },
     "devDependencies": {
-        "ajv": "^8.1.0",
-        "ajv-cli": "^5.0.0",
-        "prettier": "^2.3.2",
+        "ajv": "8.1.0",
+        "ajv-cli": "5.0.0",
+        "prettier": "2.3.2",
         "vsce": "^1.96.1"
     }
 }
