--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
         ]
     },
     "devDependencies": {
+        "@types/jest-json-schema": "^2.1.3",
         "ajv": "^8.1.0",
-        "ajv-cli": "^5.0.0"
+        "ajv-cli": "^5.0.0",
+        "jest-json-schema": "^5.0.0"
     }
 }
