feat(vscode): release v1.3.0

--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -2,7 +2,7 @@
 name: nodejs
 on:
   push:
-     paths:
+    paths:
       - "**/**"
       - "!**/*.md/**"
 
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['14']
-        os: ['ubuntu-latest']
+        node: ["14"]
+        os: ["ubuntu-latest"]
 
     steps:
       - name: Clone repository
