feat(highlighting): add semantic highlighting support
Signed-off-by: sam bacha <sam@manifoldfinance.com>

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -18,5 +18,9 @@
     ["{", "}"],
     ["[", "]"],
     ["(", ")"]
-  ]
+  ],
+  "indentationRules": {
+    "increaseIndentPattern": "^((?!\\/\\/).)*(\\{[^}\"'`]*|\\([^)\"'`]*|\\[[^\\]\"'`]*)$",
+    "decreaseIndentPattern": "^((?!.*?\\/\\*).*\\*/)?\\s*[\\)\\}\\]].*$"
+  }
 }
