--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
   "files.trimTrailingWhitespace": true,
   "gitlens.advanced.blame.customArguments": ["--ignore-revs-file", ".gitignore-revs"]
+  "solidity.packageDefaultDependenciesContractsDirectory": "src",
+  "solidity.packageDefaultDependenciesDirectory": "lib",
+  "solidity.compileUsingRemoteVersion": "v0.8.10",
+  "search.exclude": { "lib": true },
+  "files.associations": {
+    ".dapprc": "shellscript",
+    ".gas-snapshot": "julia"
+  }
 }
