--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "publisher": "ContractShark",
   "icon": "assets/icon.png",
   "license": "MIT",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "engines": {
-    "vscode": "^1.65.0"
+    "vscode": "^1.67.0"
   },
   "keywords": [
     "solidity",
@@ -61,16 +61,18 @@
         "configuration": "./language-configuration.json"
       }
     ],
-    "grammars": [
-      {
-        "language": "solidity",
-        "scopeName": "source.solidity",
-        "path": "./syntaxes/solidity.tmLanguage.json",
-        "injectTo": [
-          "source.solidity"
-        ]
-      }
-    ]
+"grammars": [
+    {
+      "language": "solidity",
+      "scopeName": "source.solidity",
+      "path": "./syntaxes/solidity.tmLanguage.json",
+      "balancedBracketScopes": [ "*" ],
+      "unbalancedBracketScopes": [ "meta.scope.case-pattern.solidity" ],
+      "injectTo": [
+        "source.solidity"
+      ]
+    }
+  ]
   },
   "devDependencies": {
     "@vscode/test-web": "^0.0.15",
