feat(lang): colorized bracket support

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -8,6 +8,7 @@
     ["[", "]"],
     ["(", ")"]
   ],
+  "autoCloseBefore": ", \n\t",
   "autoClosingPairs": [
     { "open": "{", "close": "}" },
     { "open": "[", "close": "]" },
@@ -22,5 +23,13 @@
   "indentationRules": {
     "increaseIndentPattern": "^((?!\\/\\/).)*(\\{[^}\"'`]*|\\([^)\"'`]*|\\[[^\\]\"'`]*)$",
     "decreaseIndentPattern": "^((?!.*?\\/\\*).*\\*/)?\\s*[\\)\\}\\]].*$"
-  }
+  },
+"colorizedBracketPairs": [
+		["(", ")"],
+		["${", "}"],
+		["{", "}"],
+		["[:", ":]"],
+		["[", "]"],
+		["<", ">"]
+	]
 }
