--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solidity-lang",
   "displayName": "solidity-syntax",
-  "description": "solidity syntax highlighting, thats it",
+  "description": "solidity & evm semantic syntax highlighting",
   "publisher": "ContractShark",
   "icon": "assets/icon.png",
   "license": "MIT",
@@ -14,13 +14,24 @@
     "ethereum",
     "blockchain",
     "security",
-    "audit",
-    "review",
-    "developer",
+    "echidna",
+    "semantic",
+    "semantic highlighting",
     "solidity security",
     "solidity audit",
     "language",
-    "theme"
+    "theme",
+    "EVM",
+    "evm-toolkit",
+    "eth",
+    "defi",
+    "compiler",
+    "assembly",
+    "hardhat",
+    "foundry",
+    "bytecode",
+    "opcode",
+    "natspec"
   ],
   "extensionKind": [
     "ui",
@@ -39,7 +50,9 @@
     "url": "https://github.com/contractshark/vscode-extenstion.git"
   },
   "categories": [
-    "Programming Languages"
+    "Programming Languages",
+    "Snippets",
+    "Themes"
   ],
   "configurationDefaults": {
     "solidity": {
@@ -56,6 +69,7 @@
         ],
         "extensions": [
           ".sol",
+          ".t.sol"
           ".solidity"
         ],
         "configuration": "./language-configuration.json"
