--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solidity-lang",
   "displayName": "solidity-syntax",
-  "description": "solidity & evm semantic syntax highlighting",
+  "description": "Solidity & EVM Semantic syntax Highlighting",
   "publisher": "ContractShark",
   "icon": "assets/icon.png",
   "license": "MIT",
@@ -69,7 +69,7 @@
         ],
         "extensions": [
           ".sol",
-          ".t.sol"
+          ".t.sol",
           ".solidity"
         ],
         "configuration": "./language-configuration.json"
