--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publisher": "ContractShark",
   "icon": "assets/icon.png",
   "license": "MIT",
-  "version": "1.6.0",
+  "version": "2.0.0",
   "engines": {
     "vscode": "^1.67.0"
   },
@@ -38,6 +38,9 @@
   "extensionKind": [
     "ui",
     "workspace"
+  ],
+  "activationEvents": [
+    "onLanguage:solidity"
   ],
   "scripts": {
     "ci": "npm i -g vsce && npm run build",
