--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "version": "2.0.0",
   "engines": {
-    "vscode": "^1.67.0"
+    "vscode": "^1.74.0"
   },
   "keywords": [
     "solidity",
@@ -43,7 +43,7 @@
     "onLanguage:solidity"
   ],
   "scripts": {
-    "ci": "npm i -g vsce && npm run build",
+    "ci": "npm i -g @vscode/vsce && npm run build",
     "build": "npx vsce package -o dist/",
     "test": "npx ajv-cli test -s tests/tmLanguage.schema.json -d syntaxes/solidity.tmLanguage.json --valid"
   },
@@ -127,11 +127,10 @@
   },
   "devDependencies": {
     "@vscode/test-web": "^0.0.33",
-    "@vscode/vsce": "^2.16.0",
+    "@vscode/vsce": "^3.2.2",
     "ajv": "8.11.2",
     "ajv-cli": "5.0.0",
     "prettier": "2.8.1",
-    "vsce": "2.15.0",
     "vscode-textmate": "^9.2.0",
     "vscode-tmgrammar-test": "^0.1.3"
   }
