--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "files.trimTrailingWhitespace": true,
-  "gitlens.advanced.blame.customArguments": ["--ignore-revs-file", ".gitignore-revs"]
+  "gitlens.advanced.blame.customArguments": [
+    "--ignore-revs-file",
+    ".gitignore-revs"
+  ],
+  "wake.compiler.solc.remappings": []
 }
