--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "engines": {
     "vscode": "^1.74.0"
   },
+  "pricing": "Free",
   "keywords": [
     "solidity",
     "yul",
@@ -45,7 +46,8 @@
   "scripts": {
     "ci": "npm i -g @vscode/vsce && npm run build",
     "build": "npx vsce package -o dist/",
-    "test": "npx ajv-cli test -s tests/tmLanguage.schema.json -d syntaxes/solidity.tmLanguage.json --valid"
+    "test": "npx ajv-cli test -s tests/tmLanguage.schema.json -d syntaxes/solidity.tmLanguage.json --valid",
+    "test:grammar": "node --loader ts-node/esm tests/tmgrammar.test.ts"
   },
   "bugs": {
     "url": "https://github.com/contractshark/scode-extenstion/issues"
@@ -126,12 +128,16 @@
     ]
   },
   "devDependencies": {
-    "@vscode/test-web": "^0.0.33",
+    "@types/node": "^20.17.19",
+    "@vscode/test-web": "^0.0.66",
     "@vscode/vsce": "^3.2.2",
     "ajv": "8.11.2",
-    "ajv-cli": "5.0.0",
+    "ajv-cli": "^0.6.0",
     "prettier": "2.8.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
     "vscode-textmate": "^9.2.0",
-    "vscode-tmgrammar-test": "^0.1.3"
+    "vscode-tmgrammar-test": "^0.1.3",
+    "vscode-tmlanguage-snapshot": "^0.1.3"
   }
 }
