--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "version": "2.0.0",
   "engines": {
-    "vscode": "^1.67.0"
+    "vscode": "^1.74.0"
   },
+  "pricing": "Free",
   "keywords": [
     "solidity",
     "yul",
@@ -39,13 +40,11 @@
     "ui",
     "workspace"
   ],
-  "activationEvents": [
-    "onLanguage:solidity"
-  ],
   "scripts": {
-    "ci": "npm i -g vsce && npm run build",
+    "ci": "npm i -g @vscode/vsce && npm run build",
     "build": "npx vsce package -o dist/",
-    "test": "npx ajv-cli test -s tests/tmLanguage.schema.json -d syntaxes/solidity.tmLanguage.json --valid"
+    "test": " npx vscode-tmgrammar-test -g syntaxes/solidity.tmLanguage.json tests/solidity.syntax-test.sol",
+    "test:grammar": "node --loader ts-node/esm tests/tmgrammar.test.ts"
   },
   "bugs": {
     "url": "https://github.com/contractshark/scode-extenstion/issues"
@@ -126,13 +125,15 @@
     ]
   },
   "devDependencies": {
-    "@vscode/test-web": "^0.0.33",
-    "@vscode/vsce": "^2.16.0",
+    "@types/node": "^20.17.19",
+    "@vscode/test-web": "^0.0.66",
+    "@vscode/vsce": "^3.2.2",
     "ajv": "8.11.2",
-    "ajv-cli": "5.0.0",
+    "ajv-cli": "^0.6.0",
     "prettier": "2.8.1",
-    "vsce": "2.15.0",
+    "typescript": "^5.7.3",
     "vscode-textmate": "^9.2.0",
-    "vscode-tmgrammar-test": "^0.1.3"
+    "vscode-tmgrammar-test": "^0.1.3",
+    "vscode-tmlanguage-snapshot": "^0.1.3"
   }
 }
